<resources>
    <string name="app_name">My1stApp</string>
    <string name="jeremie">Jeremie</string>
    <string name="random">Random</string>
    <string name="toast">Toast</string>
    <string name="count">Count</string>
    <string name="_0">0</string>
    <string name="random_heading">Here is a random number between 0 and %1d</string>
    <string name="r">R</string>
    <string name="reset">reset</string>

</resources>
